test/fail/exceptions/trigger_formaterror.lly
#[
FormatError: Not enough args for printfmt.
Traceback:
    File "[builtin]", from printfmt
    File "trigger_formaterror.lly", from __main__ at line 8
]#

printfmt("%s%s%s%s%s", "")
